# meson-gtk-example

./: .gitignore  README.md  build.txt  meson.build
include/core/: exports.hpp  meson.build  meta.hpp
profiles/: default.ini
profiles/cross/: mingw.ini
scripts/: build.sh  configure.sh  fetch.sh
src/app/: main.cpp  main.ui  meson.build  resources.xml
src/core/: meson.build  meta.cpp
subprojects/: .gitignore  cairo.wrap  cairomm-1.16.wrap  fontconfig.wrap  fribidi.wrap  gdk-pixbuf.wrap  gi-docgen.wrap  glib.wrap  glibmm-2.68.wrap  gperf.wrap  graphene.wrap  gtk4.wrap  gtkmm.wrap  harfbuzz.wrap  libepoxy.wrap  libffi.wrap  pango.wrap  pangomm-2.48.wrap  pixman.wrap  sigc++-3.0.wrap
subprojects/packagefiles/cairo/: mingw_fix.patch
